...
        tools:context=".ui.main.details.DetailsFragment">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/is_like">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

...
            android:text="@{viewModel.isCatSaved ? @string/saved : @string/not_saved}"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:text="Saved" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:onClick="@{() -> viewModel.onSaveCat()}"
            android:src="@{viewModel.isCatSaved ? @drawable/ic_star : @drawable/ic_add}"
            app:layout_constraintBottom_toBottomOf="parent"
...
